# valknut

./: .actrc  .dockerignore  .env.act  .env.example  .gitignore  .pre-commit-config.yaml  .valknut-enhanced.yml  .valknut-oracle-response.json  .valknut.dev.yml  .valknut.docaudit.yml  .valknut.yml  ARBITER_PERFORMANCE_REPORT.md  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLI_USAGE.md  Cargo.toml  Cross.toml  Dockerfile  FINAL_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  LICENSE  Makefile  NOTICE  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PRE_RELEASE_REPORT.md  REACT_ERROR_31_ANALYSIS.md  README.md  README_INSTALLATION.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_STATUS_v1.0.0.md  SECURITY.md  SEMANTIC_NAMING_IMPLEMENTATION_SUMMARY.md  SETUP_WITH_YOUR_ACCOUNT.md  STRUCTURE_ANALYZER_IMPLEMENTATION_SUMMARY.md  (+44 more)
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml  docs.yml  enhanced-ci.yml  hygiene.yml  monitoring.yml  performance.yml  production.yml  quality-gates.yml  release.yml  security.yml
.github/workflows.backup/: ci.yml  security.yml
.valknut-src/: analysis-results.json
attic/: README.md
attic/configs/: default-config.yml
attic/debug-files/: debug-react-error.js  debug_oracle.rs  debug_output2.txt  debug_react_error_31.js  debug_react_structure.js  final-test.json  full-project.json  package-lock.json  package.json  test_additions.txt  (+2 more)
attic/python-valknut/: IMPLEMENTATION_SUMMARY_PYTHON_CLI.md  README.md  coverage.json  demo_refactoring_output.py  direct_profile_coverage.py  integration_test_report.py  optimized_coverage_profile.py  performance_profiler.py  profile_coverage_packs.py  pyproject.toml  runtime_benchmark.py  simple_coverage_profile.py  simple_profiler.py  valknut-config-with-echo.yml  valknut-config.yml  valknut_agent.py
attic/python-valknut/tests/: conftest.py
attic/python-valknut/tests/fixtures/complex_typescript/src/: utils.ts
attic/python-valknut/tests/fixtures/javascript_legacy/: main.js
attic/python-valknut/tests/fixtures/simple_python/: main.py  utils.py
attic/python-valknut/tests/fixtures/structure_small/: create_test_files.py
attic/python-valknut/valknut/: __main__.py  cli.py
attic/python-valknut/valknut/api/: __init__.py  mcp.py  stdio_server.py
attic/python-valknut/valknut/core/: briefs.py  config.py  errors.py  featureset.py  impact_packs.py  pipeline.py  registry.py  scoring.py
attic/python-valknut/valknut/detectors/: __init__.py  complexity.py  coverage.py  echo_bridge.py  graph.py  refactoring.py  structure.py
attic/python-valknut/valknut/io/: __init__.py  fsrepo.py  reports.py
attic/python-valknut/valknut/lang/: __init__.py  bash_adapter.py  common_ast.py  go_adapter.py  javascript_adapter.py  python_adapter.py  rust_adapter.py  typescript_adapter.py
benches/: clone_denoising_benchmarks.rs  clone_denoising_benchmarks.rs.disabled  lsh_optimization_benchmarks.rs  memory_pool_benchmark.rs  performance.rs
benchmarks/: README.md
ci-examples/: .valknut-ci.json  azure-pipelines.yml  github-actions.yml  gitlab-ci.yml
crates/doc_audit/: Cargo.toml  README.md
crates/doc_audit/src/: lib.rs
datasets/: README.md  complexity_benchmark.py  irrefutable_complexity_test.py  quick_start_guide.md  sample_bad_code.py
docs/: AGENT_USAGE_GUIDE.md  ARCHITECTURE_DEEP_DIVE.md  CI_LOCAL_TESTING.md  CLI_ENHANCEMENTS.md  CLI_PARITY_COMPLETE.md  CLI_USAGE.md  CONFIG_GUIDE.md  INTEGRATION_COMPLETE.md  NEW_FEATURES_SUMMARY.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATIONS.md  QUALITY_GATES_GUIDE.md  README.md  SEMANTIC_NAMING.md  SEMANTIC_NAMING_IMPLEMENTATION_SUMMARY.md  TEMPLATE_SYSTEM_README.md  analysis_normalization_todo.md  analysis_pipeline_refactor.md  cli_reference.md  config_reference.md  coverage.md  doc_health_todo.md  index.md  metrics.md  pipeline_pass_migration_todo.md  quickstart.md  refactoring_playbook.md  scribe-docs-analysis.html  team_reports.md  template-system.md  trefoil-animation-docs.js
examples/: README.md  cli_output_demo.py  clone_verification.rs  report-config.yml  sample-report.json  simplified_config_demo.rs  team_reporting_demo.py  test_memory_pools.rs  test_phase4_example.rs  valknut-config-full.yml  valknut-config-legacy.yml  valknut-config-minimal.yml
reports/: refactoring_guide.md  team_report.md
scripts/: benchmark.sh  install_parsers.sh  release.sh  setup-ci-tools.sh  setup-dev-env.sh  setup-github-homebrew.sh  team_report.py  test-ci-locally.sh  test_cli_features.sh  validate-ci.sh  validate-pipeline.sh
src/: .valknut-oracle-response.json  README.md  doc_audit.rs  doc_audit_tests.rs  lib.rs  scribe-src-analysis.html  test-fast.html  test-normal.html  test-strace.html  test-strace2.html  test-time.html  test.html  test_coverage_integration.rs
templates/: README.md  markdown_report.hbs  report-original-backup.hbs  report.hbs  report.hbs.backup
test_cjs/: module.cjs
test_js_support/: module.mjs
test_output/: refactoring_guide.md
test_project/: complex.py
test_structure/: refactoring_guide.md
tests/: README.md  _disabled_comprehensive_clone_detection_tests.rs.bak  arena_analysis.rs  ast_stop_motif_integration.rs  caching_effectiveness_test.rs  cli_tests.rs  clone_denoising_tests.rs  code_dictionary_coverage.rs  comprehensive_clone_detection_tests.rs  config_generator.rs  cpp_benchmark_eval.rs  directory_health_tree_tests.rs  enhanced_cli_tests.rs  full_analysis.rs  lsh_performance_test.rs  mcp_integration_tests.rs  mcp_integration_tests_fixed.rs  memory_pool_integration_test.rs  mod.rs  pipeline_result_types.rs  setup.js  simd_optimization_tests.rs  simple_performance_tests.rs  test-analysis.html  test_semantic_names.rs.bak
themes/: README.md  default.css  dracula.css  sibylline.css
valknut/: __init__.py  cli.py
vscode-extension/: README.md  package-lock.json  package.json
(+592 files in other folders)
