[package]
name = "valknut-rs"
version = "1.2.2"
edition = "2021"
authors = ["Nathan Rice <nathan@sibylline.dev>"]
description = "High-performance Rust implementation of valknut code analysis algorithms"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanricedev/valknut"
keywords = ["code-analysis", "refactoring", "algorithms", "performance"]
categories = ["development-tools", "algorithms", "science"]

[lib]
name = "valknut_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "valknut"
path = "src/bin/valknut.rs"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# JSON-RPC and MCP server support
jsonrpsee = { version = "0.21", features = ["server", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }

# High-performance data structures
indexmap = "2.0"
hashbrown = "0.14"
smallvec = { version = "1.11", features = ["serde"] }
ahash = "0.8"
bitvec = "1.0"

# Graph algorithms
petgraph = { version = "0.6", features = ["serde-1"] }
pathfinding = "4.0"

# Mathematical and statistical computing
ndarray = { version = "0.15", features = ["serde", "rayon"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
statrs = "0.16"
num-traits = "0.2"
num-integer = "0.1"

# Hashing and similarity algorithms  
seahash = "4.1"
twox-hash = "1.6"
fnv = "1.0"
blake3 = "1.5"
sha2 = "0.10"

# LSH and MinHash specific
probabilistic-collections = "0.7"
hyperloglog = "1.0"

# String processing and text algorithms (regex removed - using tree-sitter exclusively)
aho-corasick = "1.1"
unicode-segmentation = "1.10"
edit-distance = "2.1"

# Statistical analysis dependencies (ML dependencies removed)
# candle-core = "0.6"
# candle-transformers = "0.6" 
# candle-nn = "0.6"
# hf-hub = "0.3"
# tokenizers = "0.19"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# SIMD and performance optimization
wide = "0.7"
bytemuck = "1.14"
# packed_simd = { version = "0.3", optional = true }  # Disabled: incompatible with Rust 1.78+

# Lock-free data structures
dashmap = "5.5"
arc-swap = "1.6"

# AST parsing and language support
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"

# CLI and configuration
clap = { version = "4.0", features = ["derive", "env", "color"] }
config = "0.13"
dirs = "5.0"
glob = "0.3"
walkdir = "2.4"

# UUID and time handling (moved below to avoid duplicate)
# uuid and chrono are defined in the Time and UUID utilities section

# Rich console output and UI
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
tabled = { version = "0.14", features = ["color"] }
owo-colors = "3.5"
textwrap = "0.16"

# Error handling and logging  
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Memory management and optimization
mimalloc = { version = "0.1", optional = true }
jemallocator = { version = "0.5", optional = true }

# Database integration (optional) - Updated to fix security vulnerabilities  
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true, default-features = false }

# Time and UUID utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"

# Template engine for HTML reports
handlebars = "4.5"

# Live reachability dependencies  
# parquet2 = { version = "0.17", features = ["async"] }  # Disabled for now, using JSON storage
object_store = { version = "0.10", features = ["aws", "gcp", "azure"] }
bloom = "0.3"
url = "2.5"

# Development and testing utilities
criterion = { version = "0.5", optional = true }
proptest = { version = "1.0", optional = true }
scribe-analyzer = "0.1.0"
reqwest = { version = "0.12.23", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.8"
approx = "0.5"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["mimalloc", "simd", "parallel"]
database = ["sqlx"]
benchmarks = ["criterion"]
property-testing = ["proptest"]
jemalloc = ["jemallocator"]

# Performance optimization features
simd = []
parallel = ["rayon/web_spin_lock"]
lto = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
debug = true
lto = true

[[bench]]
name = "performance"
harness = false
required-features = ["benchmarks"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
