[package]
name = "doc_audit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Documentation and README audit utilities for the Valknut toolkit"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"
